RESOLVED FIXED209881
http/tests/navigation/page-cache-fontfaceset.html is flaky crashing
https://bugs.webkit.org/show_bug.cgi?id=209881
Summary http/tests/navigation/page-cache-fontfaceset.html is flaky crashing
Chris Dumez
Reported 2020-04-01 14:45:10 PDT
http/tests/navigation/page-cache-fontfaceset.html is flaky crashing: SHOULD NEVER BE REACHED Crash log: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x0000000104137c00 WTFCrash + 16 1 com.apple.WebCore 0x000000011a06729b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x000000011d1fd808 WebCore::DocumentLoader::addSubresourceLoader(WebCore::ResourceLoader*) + 808 3 com.apple.WebCore 0x000000011d2ff6cc WebCore::SubresourceLoader::init(WebCore::ResourceRequest&&, WTF::CompletionHandler<void (bool)>&&)::$_2::operator()(bool) + 364 4 com.apple.WebCore 0x000000011d2ff49d WTF::Detail::CallableWrapper<WebCore::SubresourceLoader::init(WebCore::ResourceRequest&&, WTF::CompletionHandler<void (bool)>&&)::$_2, void, bool>::call(bool) + 61 5 com.apple.WebCore 0x000000011a305a6b WTF::Function<void (bool)>::operator()(bool) const + 171 6 com.apple.WebCore 0x000000011a301aca WTF::CompletionHandler<void (bool)>::operator()(bool) + 282 7 com.apple.WebCore 0x000000011d2d5259 WebCore::ResourceLoader::init(WebCore::ResourceRequest&&, WTF::CompletionHandler<void (bool)>&&)::$_0::operator()(WebCore::ResourceRequest&&) + 169 8 com.apple.WebCore 0x000000011d2d4fa1 WTF::Detail::CallableWrapper<WebCore::ResourceLoader::init(WebCore::ResourceRequest&&, WTF::CompletionHandler<void (bool)>&&)::$_0, void, WebCore::ResourceRequest&&>::call(WebCore::ResourceRequest&&) + 49 9 com.apple.WebCore 0x000000011b8da877 WTF::Function<void (WebCore::ResourceRequest&&)>::operator()(WebCore::ResourceRequest&&) const + 151 10 com.apple.WebCore 0x000000011b8da71a WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>::operator()(WebCore::ResourceRequest&&) + 266 11 com.apple.WebCore 0x000000011d2fa438 WebCore::SubresourceLoader::willSendRequestInternal(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&)::$_0::operator()(WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&, WebCore::ResourceRequest&&)::'lambda'(WebCore::ResourceRequest&&)::operator()(WebCore::ResourceRequest&&) + 1640 12 com.apple.WebCore 0x000000011d2f9d01 WTF::Detail::CallableWrapper<WebCore::SubresourceLoader::willSendRequestInternal(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&)::$_0::operator()(WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&, WebCore::ResourceRequest&&)::'lambda'(WebCore::ResourceRequest&&), void, WebCore::ResourceRequest&&>::call(WebCore::ResourceRequest&&) + 49 13 com.apple.WebCore 0x000000011b8da877 WTF::Function<void (WebCore::ResourceRequest&&)>::operator()(WebCore::ResourceRequest&&) const + 151 14 com.apple.WebCore 0x000000011b8da71a WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>::operator()(WebCore::ResourceRequest&&) + 266 15 com.apple.WebCore 0x000000011d2c5c02 WebCore::ResourceLoader::willSendRequestInternal(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&) + 3698 16 com.apple.WebCore 0x000000011d2e2947 WebCore::SubresourceLoader::willSendRequestInternal(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&)::$_0::operator()(WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&, WebCore::ResourceRequest&&) + 1735 17 com.apple.WebCore 0x000000011d2e0c5b WebCore::SubresourceLoader::willSendRequestInternal(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&) + 9419 18 com.apple.WebCore 0x000000011d2c4107 WebCore::ResourceLoader::init(WebCore::ResourceRequest&&, WTF::CompletionHandler<void (bool)>&&) + 1159 19 com.apple.WebCore 0x000000011d2de56a WebCore::SubresourceLoader::init(WebCore::ResourceRequest&&, WTF::CompletionHandler<void (bool)>&&) + 138 20 com.apple.WebCore 0x000000011d2de3ca WebCore::SubresourceLoader::create(WebCore::Frame&, WebCore::CachedResource&, WebCore::ResourceRequest&&, WebCore::ResourceLoaderOptions const&, WTF::CompletionHandler<void (WTF::RefPtr<WebCore::SubresourceLoader, WTF::DumbPtrTraits<WebCore::SubresourceLoader> >&&)>&&) + 186 21 com.apple.WebKitLegacy 0x00000001318c6688 WebResourceLoadScheduler::loadResource(WebCore::Frame&, WebCore::CachedResource&, WebCore::ResourceRequest&&, WebCore::ResourceLoaderOptions const&, WTF::CompletionHandler<void (WTF::RefPtr<WebCore::SubresourceLoader, WTF::DumbPtrTraits<WebCore::SubresourceLoader> >&&)>&&) + 168 22 com.apple.WebCore 0x000000011d34ee9f WebCore::CachedResource::load(WebCore::CachedResourceLoader&) + 5407 23 com.apple.WebCore 0x000000011d34204c WebCore::CachedFont::beginLoadIfNeeded(WebCore::CachedResourceLoader&) + 60 24 com.apple.WebCore 0x000000011c525cba WebCore::CSSFontSelector::beginLoadTimerFired() + 170 25 com.apple.WebCore 0x000000011c548531 decltype(*(std::__1::forward<WebCore::CSSFontSelector*&>(fp0)).*fp()) std::__1::__invoke<void (WebCore::CSSFontSelector::*&)(), WebCore::CSSFontSelector*&, void>(void (WebCore::CSSFontSelector::*&&&)(), WebCore::CSSFontSelector*&&&) + 113 26 com.apple.WebCore 0x000000011c5484b0 std::__1::__bind_return<void (WebCore::CSSFontSelector::*)(), std::__1::tuple<WebCore::CSSFontSelector*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::CSSFontSelector::*)(), std::__1::tuple<WebCore::CSSFontSelector*>, std::__1::tuple<> >::value>::type std::__1::__apply_functor<void (WebCore::CSSFontSelector::*)(), std::__1::tuple<WebCore::CSSFontSelector*>, 0ul, std::__1::tuple<> >(void (WebCore::CSSFontSelector::*&)(), std::__1::tuple<WebCore::CSSFontSelector*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&) + 64 27 com.apple.WebCore 0x000000011c54845c std::__1::__bind_return<void (WebCore::CSSFontSelector::*)(), std::__1::tuple<WebCore::CSSFontSelector*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::CSSFontSelector::*)(), std::__1::tuple<WebCore::CSSFontSelector*>, std::__1::tuple<> >::value>::type std::__1::__bind<void (WebCore::CSSFontSelector::*&)(), WebCore::CSSFontSelector*>::operator()<>() + 60 28 com.apple.WebCore 0x000000011c5483f9 WTF::Detail::CallableWrapper<std::__1::__bind<void (WebCore::CSSFontSelector::*&)(), WebCore::CSSFontSelector*>, void>::call() + 25 29 com.apple.WebCore 0x000000011a074b0a WTF::Function<void ()>::operator()() const + 138 30 com.apple.WebCore 0x000000011a12d8b9 WebCore::Timer::fired() + 25 31 com.apple.WebCore 0x000000011d6a47ca WebCore::ThreadTimers::sharedTimerFiredInternal() + 650 32 com.apple.WebCore 0x000000011d6abe51 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const + 33 33 com.apple.WebCore 0x000000011d6abe09 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() + 25 34 com.apple.WebCore 0x000000011a074b0a WTF::Function<void ()>::operator()() const + 138 35 com.apple.WebCore 0x000000011d670f37 WebCore::MainThreadSharedTimer::fired() + 135 36 com.apple.WebCore 0x000000011d70ec96 WebCore::timerFired(__CFRunLoopTimer*, void*) + 38 37 com.apple.CoreFoundation 0x00007fff444cb5d5 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20 38 com.apple.CoreFoundation 0x00007fff444cb181 __CFRunLoopDoTimer + 864 39 com.apple.CoreFoundation 0x00007fff444cacba __CFRunLoopDoTimers + 330 40 com.apple.CoreFoundation 0x00007fff444ac304 __CFRunLoopRun + 2141 41 com.apple.CoreFoundation 0x00007fff444ab855 CFRunLoopRunSpecific + 459 42 DumpRenderTree 0x000000010330f3cb runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 3419 (DumpRenderTree.mm:2118) 43 DumpRenderTree 0x000000010330e5ca runTestingServerLoop() + 218 (DumpRenderTree.mm:1229) 44 DumpRenderTree 0x000000010330dcf3 dumpRenderTree(int, char const**) + 611 (DumpRenderTree.mm:1344) 45 DumpRenderTree 0x000000010330fddd DumpRenderTreeMain(int, char const**) + 109 (DumpRenderTree.mm:1463) 46 DumpRenderTree 0x0000000103396822 main + 34 (DumpRenderTreeMain.mm:34) 47 libdyld.dylib 0x00007fff704a93d5 start + 1
Attachments
Patch (3.17 KB, patch)
2020-04-01 14:48 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-04-01 14:45:23 PDT
Chris Dumez
Comment 2 2020-04-01 14:48:54 PDT
EWS
Comment 3 2020-04-01 15:32:46 PDT
Committed r259367: <https://trac.webkit.org/changeset/259367> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395206 [details].
Note You need to log in before you can comment on or make changes to this bug.