http/tests/navigation/page-cache-fontfaceset.html is flaky crashing https://bugs.webkit.org/show_bug.cgi?id=209881 <rdar://problem/61114827>

Reviewed by Darin Adler.

Make sure CSSFontSelector::m_beginLoadingTimer uses a SuspendableTimer instead of a regular
timer so that it cannot fire while in the back/forward cache and start a load.

No new tests, covered by existing test.

* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::CSSFontSelector):
(WebCore::CSSFontSelector::clearDocument):
* css/CSSFontSelector.h:


Canonical link: https://commits.webkit.org/222797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259367 268f45cc-cd09-0410-ab3c-d52691b4dbfc